Fix line wrapping

--- a/common/css/rhymix.scss
+++ b/common/css/rhymix.scss
@@ -23,9 +23,11 @@ a img {
 	font-family: $default_font_family;
 	font-size: $default_font_size;
 	line-height: $default_line_height;
-	word-break: $default_word_break;
 	@if $default_word_break == 'none' {
 		white-space: nowrap;
+	} @else {
+		word-break: $default_word_break;
+		word-wrap: break-word;
 	}
 	p {
 		margin: 0 0 $default_paragraph_spacing 0;
